--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "lucide-react": "^0.427.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-player": "^2.16.0",
     "react-router-dom": "^6.26.0",
     "react-toastify": "^10.0.5",
     "socket.io-client": "^4.7.5"
